--- a/_config.yml
+++ b/_config.yml
@@ -427,7 +427,7 @@ changyan:
 #google_site_verification:
 
 # Google Analytics
-#google_analytics:
+google_analytics: UA-105607029-1
 
 # Yandex Webmaster tools verification setting
 # See: https://webmaster.yandex.ru/
